Fixed overlapping lines on homepage

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -86,6 +86,7 @@ html, body {
   display: block; /* Ensure each line is on a new line */
   font-size: 2vw;
   text-transform: uppercase;
+  line-height: 1.4;
   letter-spacing: 2vw;
 }
 
